# tech_support_ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  integration-live.yml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_chat_sessions_messages.py  002_policy_zammad_audit.py
apps/api/src/tech_support_api/: __init__.py  config.py  main.py
apps/api/src/tech_support_api/db/: models.py  session.py
apps/api/src/tech_support_api/dependencies/: auth.py  services.py
apps/api/src/tech_support_api/routers/: chat.py  config.py  graph.py  health.py
apps/api/src/tech_support_api/schemas/: chat.py
apps/api/src/tech_support_api/services/: audit_service.py  chat_service.py  graph_service.py  mock_graph.py  redis_store.py  ticket_pipeline.py
apps/api/tests/: conftest.py  test_auth.py  test_chat_history.py  test_chat_sessions.py  test_graph_chat.py  test_graph_endpoint.py  test_health.py  test_mock_graph.py  test_redis_session.py  test_thought_streaming.py  test_ticket_pipeline.py
apps/web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.tsx  index.css  vite-env.d.ts
docs/: functional-document.md  implementation-strategy.md  provider-abstraction-strategy.md  solution-architecture.md  technical-strategy.md  test-strategy-live-integration.md  ui-ux-strategy.md
docs/postman/: Tech-Support-AI.postman_collection.json
e2e/: global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts
e2e/pages/: chat.page.ts
e2e/tests/: chat-bootstrap.spec.ts  create-ticket.spec.ts  session-resume.spec.ts
infra/docker/: api-entrypoint.sh  api.Dockerfile  web.Dockerfile
scripts/: create_ticket.py  run_e2e_api.sh  zammad_sandbox_e2e.py
tests/integration/: conftest.py  env_loader.py  live_stack.py  log.py  scenarios.py  simulated_conversation.py  test_env_loader.py  test_helpers.py  test_live_create_ticket.py  test_live_create_ticket_ui.py  transport.py
(+37 files in other folders)
