[project]
name = "tech-support-api"
version = "0.1.0"
description = "FastAPI backend for Tech Support AI"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "alembic>=1.14.0",
  "psycopg2-binary>=2.9.10",
  "redis>=5.2.0",
  "PyJWT>=2.10.0",
  "tech-support-shared",
  "tech-support-orchestration",
  "tech-support-zammad-client",
  "tech-support-ticketing",
  "tech-support-agents",
]

[project.scripts]
tech-support-api = "tech_support_api.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tech_support_api"]
